[package]
name = "clpack"
version = "1.1.0"
edition = "2024"
authors = ["Ondřej Hruška <ondra@ondrovo.com>"]
description = "Manage changelog across multiple release channels"

[dependencies]
log = "0.4"
clap = { version = "4.5", features = ["string"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
smart-default = "0.7"
regex = "1"
anyhow = "1"
colored = "3"
faccess = "0.2"
chrono = "0.4"
indexmap = { version = "2.11", features = ["serde"] }
inquire = { version = "0.9", features = ["editor"] }

# For integrations
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] } #, optional = true
json_dotpath = "1.1.0"
dotenv = "0.15.0"

env_logger = "0.11.8"

[dev-dependencies]
simple-logging = "2"
